--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ site.title }}</title>
-	<meta name="keywords" content="{{ site.keywords }}">
-	<meta name="description" content="{{ site.description }}">
+  <meta name="subject" content="Node Email Verification Official Site">
+  <meta name="topic" content="Documentation and Description of the Node Email Verification npm module">
+  
+  <!-- Full domain name or web address -->
+  <meta name="url" content="https://email-verification.xyz/">
+
+  <meta name="keywords" content="{{ site.keywords }}">
+  <meta name="description" content="{{ site.description }}">
   <link rel="stylesheet" href="combo.css">
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
